WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153954
Call CFRelease() on SecRequirementRef when no longer needed
https://bugs.webkit.org/show_bug.cgi?id=153954
Summary
Call CFRelease() on SecRequirementRef when no longer needed
Daniel Bates
Reported
2016-02-06 14:13:46 PST
We should call CFRelease() on the SecRequirementRef allocated by SecRequirementCreateWithString() when we are done using it to avoid a memory leak.
Attachments
Patch
(2.48 KB, patch)
2016-02-06 14:17 PST
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-02-06 14:14:50 PST
<
rdar://problem/24540259
>
Daniel Bates
Comment 2
2016-02-06 14:17:28 PST
Created
attachment 270804
[details]
Patch
Daniel Bates
Comment 3
2016-02-06 18:03:23 PST
Comment on
attachment 270804
[details]
Patch Clearing flags on attachment: 270804 Committed
r196234
: <
http://trac.webkit.org/changeset/196234
>
Daniel Bates
Comment 4
2016-02-06 18:03:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug