Call CFRelease() on SecRequirementRef when no longer needed https://bugs.webkit.org/show_bug.cgi?id=153954 <rdar://problem/24540259>

Reviewed by Dan Bernstein.

* Shared/mac/ChildProcessMac.mm:
(WebKit::ChildProcess::initializeSandbox):

Canonical link: https://commits.webkit.org/172061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196234 268f45cc-cd09-0410-ab3c-d52691b4dbfc